--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+      <a class="navbar-brand" href="/">Home</a>
+      <a class="navbar-brand" href="users/sign_up">Sign Up</a>
+      <a class="navbar-brand" href="users/login">Sign In</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
