--- a/app/views/mailboxes/search.html.erb
+++ b/app/views/mailboxes/search.html.erb
@@ -1,11 +1,27 @@
 <h1> On search.html.erb </h1>
 
 <div>
-  <!-- Finds mailboxes within a **20 mi ** radius of the search query -->
+  <!-- Finds mailboxes within a **20 mi ** radius of the search query,
+  (@query) .Results  are auto-sorted by Geocode gem based increasing distance from search-->
+
+<!-- Empty search query gets geocoded based on user's IP address, aka current location-->
+
 <dl>
-            <% Mailbox.near(@query, 1).each do |m| %>
-   <dt> <%= m.address %></dt>
-  <dd> <%= m.distance_from(@query).round(2) %> mi.</dd>
-            <% end %>
+<% if @query.empty? %>
+          <% Mailbox.near(@user, 20).each do |m| %>
+           <dt> <%= m.address %></dt>
+          <dd> <%= m.distance_from(@query).round(2) %> mi.</dd>
+          <% end %>
+
+        <%  else  %>
+
+        <% Mailbox.near(@query, 20).each do |m| %>
+       <dt><%= m.address %></dt>
+       <dd><%= m.distance_from(@query).round(2) %> mi.</dd>
+          <% end %>
+
+<% end %>
 </dl>
-</div>
+
+
+
