--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,9 +8,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <% if user_signed_in? %>
       <a class="navbar-brand" href="/">Home</a>
-      <a class="navbar-brand" href="users/sign_up">Sign Up</a>
-      <a class="navbar-brand" href="users/login">Sign In</a>
+      <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "navbar-brand" %>
+      <% else %>
+      <a class="navbar-brand" href="/">Home</a>
+      <%= link_to "Sign Up", new_user_registration_path, method: :get, class: "navbar-brand" %>
+      <%= link_to "Sign In", new_user_session_path, method: :get, class: "navbar-brand" %>
+      <!-- <a class="navbar-brand" href="users/sign_up">Sign Up</a>
+      <a class="navbar-brand" href="users/login">Sign In</a> -->
+      <% end %>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
