--- a/app/views/mailboxes/search.html.erb
+++ b/app/views/mailboxes/search.html.erb
@@ -1,7 +1,9 @@
+<script src="//maps.google.com/maps/api/js?key=AIzaSyDKNVZPkWd4SVv42oAcG2nGZHoKlb6YC2A&v=3.13&sensor=false&libraries=geometry" type="text/javascript"></script>
+<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
+
 <h1> On search.html.erb </h1>
 
-<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
-<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
+
 
 
 
@@ -15,14 +17,14 @@
 
 <dl>
 <% if @query.empty? %>
-          <% Mailbox.near(@user, 5).each do |m| %>
+          <% Mailbox.near(@user, 20).each do |m| %>
            <dt> <%= m.address %></dt>
           <dd> <%= m.distance_from(@query).round(2) %> mi.</dd>
           <% end %>
 
         <%  else  %>
 
-        <% Mailbox.near(@query, 5).each do |m| %>
+        <% Mailbox.near(@query, 20).each do |m| %>
        <dt><%= m.address %></dt>
        <dd><%= m.distance_from(@query).round(2) %> mi.</dd>
           <% end %>
@@ -36,30 +38,17 @@
   <div id="map" style='width: 800px; height: 400px;'></div>
 </div>
 
-<!-- java here -->
+<!-- javascript here -->
 
-<script type="text/javascript">
-
-handler = Gmaps.build('Google');
-handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-  markers = handler.addMarkers([
-    {
-      "lat": 0,
-      "lng": 0,
-      "picture": {
-        "url": "https://addons.cdn.mozilla.net/img/uploads/addon_icons/13/13028-64.png",
-        "width":  36,
-        "height": 36
-      },
-      "infowindow": "hello!"
-    }
-  ]);
+<script>
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function () {
+  markers = handler.addMarkers(<%=raw @markers.to_json %>);
   handler.bounds.extendWith(markers);
   handler.fitMapToBounds();
-});
-
+  handler.getMap().setZoom(13);
+  });
 </script>
-
 
 
 
