--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Mailbox Enroute" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Mailbox Enroute" %>">
+    <title><%= content_for?(:title) ? yield(:title) : "Bluebox Finder" %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Bluebox Finder" %>">
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
