--- a/app/views/mailboxes/index.html.erb
+++ b/app/views/mailboxes/index.html.erb
@@ -1,21 +1,18 @@
+
 <div>
-<h1>Bluebox Finder</h1>
-<h5>The Manhattan Beta Edition</h5>
-<br></br>
-<h2>Locate USPS mailboxes near you.</h2>
-<div>
+            <h1>Bluebox Finder</h1>
+            <h5>The Manhattan Beta Edition</h5>
+    <br></br>
+            <h2>Locate USPS mailboxes near you.</h2>
+</div>
 
 <br></br>
 
 <div>
   <h3>Search near:</h3>
-  <%= form_tag search_mailboxes_path, method: :get do %>
-  <%= text_field_tag 'search' , nil, placeholder: ' Enter an address' %>
-  <%#= radio_button_tag(:ip_address, "ip_address") %>
-  <%#= label_tag(:ip_address, "Use my current address") %>
-<%#= check_box_tag(:ip_address) %>
-<%#= label_tag(:ip_address, "Use my current location") %>
-  <%= submit_tag "Search!" %>
-  <% end %>
-  <h4>Submit empty field to use your current location.</h4>
+      <%= form_tag search_mailboxes_path, method: :get do %>
+      <%= text_field_tag 'search' , nil, placeholder: ' Enter an address' %>
+      <%= submit_tag "Search!" %>
+      <% end %>
+
 </div>
