--- a/app/views/mailboxes/search.html.erb
+++ b/app/views/mailboxes/search.html.erb
@@ -1,12 +1,7 @@
 <script src="//maps.google.com/maps/api/js?key=AIzaSyDKNVZPkWd4SVv42oAcG2nGZHoKlb6YC2A&v=3.13&sensor=false&libraries=geometry" type="text/javascript"></script>
 <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
 
-<h1> On search.html.erb </h1>
-
-
-
-
-
+<h1> Results:</h1>
 
 
 <div>
@@ -31,7 +26,7 @@
 
 <% end %>
 </dl>
-<div>
+</div>
 
 
 <div style='width: 800px;'>
@@ -46,7 +41,7 @@
   markers = handler.addMarkers(<%=raw @markers.to_json %>);
   handler.bounds.extendWith(markers);
   handler.fitMapToBounds();
-  handler.getMap().setZoom(13);
+  handler.getMap().setZoom(1);
   });
 </script>
 
