before Tom tampers with it

--- a/app/views/mailboxes/search.html.erb
+++ b/app/views/mailboxes/search.html.erb
@@ -47,3 +47,9 @@
 
 
 
+<!--   Copy both these lines incl the hashes in CSS file to see if it improves zoom bar rendering  #mapCanvas label { width: auto; display:inline; }
+#mapCanvas img { max-width: none; } -->
+
+
+
+
