change devise migration

--- a/app/views/mailboxes/search.html.erb
+++ b/app/views/mailboxes/search.html.erb
@@ -13,8 +13,8 @@
 <dl>
 <% if @query.empty? %>
           <% Mailbox.near(@user, 20).each do |m| %>
-           <dt> <%= m.address %></dt>
-          <dd> <%= m.distance_from(@query).round(2) %> mi.</dd>
+           <dt> <%= address = m.address %></dt>
+          <dd> <%= distance = m.distance_from(@query).round(2) %> mi.</dd>
           <% end %>
 
         <%  else  %>
