--- a/app/assets/stylesheets/mailboxes.css.scss
+++ b/app/assets/stylesheets/mailboxes.css.scss
@@ -1,4 +1,3 @@
-// Place all the styles related to the mailboxes controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#map label { width: auto; display:inline; }
+#map img { max-width: none; }
 
