--- a/app/assets/stylesheets/mailboxes.css.scss
+++ b/app/assets/stylesheets/mailboxes.css.scss
@@ -1,3 +1,4 @@
 #map label { width: auto; display:inline; }
-#map img { max-width: none; }
+// #map img { max-width: none; }
+// #map_contianer img { max-width: none; }
 
