--- a/app/views/mailboxes/search.html.erb
+++ b/app/views/mailboxes/search.html.erb
@@ -1,14 +1,13 @@
 <script src="//maps.google.com/maps/api/js?key=AIzaSyDKNVZPkWd4SVv42oAcG2nGZHoKlb6YC2A&v=3.13&sensor=false&libraries=geometry" type="text/javascript"></script>
 <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
 
-<h1> Results:</h1>
+<h1> Here are your closest mailboxes:</h1>
 
 <table class="table">
   <% @results.each do |mailbox| %>
     <tr>
-      <td><%= mailbox.id %></td>
       <td><%= mailbox.address %></td>
-      <td><%= mailbox.distance_from(@query).round(2) %></td>
+      <td><%= mailbox.distance_from(@query).round(2) %>  miles</td>
     </tr>
   <% end -%>
 </table>
@@ -16,22 +15,6 @@
 
 
 <div>
-  <!-- Finds mailboxes within a **20 mi ** radius of the search query,
-  (@query) .Results  are auto-sorted by Geocode gem based increasing distance from search-->
-
-<!-- Empty search query gets geocoded based on user's IP address, aka current location-->
-
-<!-- <dl>
-        <%# Mailbox.near(@query, 20).each do |m| %>
-       <dt><%#= m.address %></dt>
-       <dd><%#= m.distance_from(@query).round(2) %> mi.</dd>
-      <%# end %>
-</dl>
-</div> -->
-
-
-
-
 
 <div style='width: 800px;'>
   <div id="map" style='width: 800px; height: 400px;'></div>
@@ -45,7 +28,7 @@
   markers = handler.addMarkers(<%=raw @markers.to_json %>);
   handler.bounds.extendWith(markers);
   handler.fitMapToBounds();
-  handler.getMap().setZoom(12);
+  handler.getMap().setZoom(16);
   });
 </script>
 
