--- a/app/views/mailboxes/search.html.erb
+++ b/app/views/mailboxes/search.html.erb
@@ -4,10 +4,13 @@
 <h1> Here are your closest mailboxes:</h1>
 
 <table class="table">
-  <% @results.each do |mailbox| %>
-    <tr>
-      <td><%= mailbox.address %></td>
-      <td><%= mailbox.distance_from(@query).round(2) %>  miles</td>
+  <tr>
+      <td>Location</td>
+      <td>Distance</td>
+
+                <% @results.each do |mailbox| %>
+        <td><%= mailbox.address %></td>
+        <td><%= mailbox.distance_from(@query).round(2) %>  miles</td>
     </tr>
   <% end -%>
 </table>
