--- a/app/views/mailboxes/search.html.erb
+++ b/app/views/mailboxes/search.html.erb
@@ -4,16 +4,25 @@
 <h1> Here are your closest mailboxes:</h1>
 
 <table class="table">
-  <tr>
-      <td>Location</td>
-      <td>Distance</td>
+  <thead>
+    <tr>
+      <th>Location</th>
+      <th>Distance</th>
+      <th></th>
+    </tr>
+  </thead>
 
-                <% @results.each do |mailbox| %>
+  <tbody>
+   <% @results.each do |mailbox| %>
+      <tr>
         <td><%= mailbox.address %></td>
         <td><%= mailbox.distance_from(@query).round(2) %>  miles</td>
-    </tr>
+        <td><%= button_to("Make a Favorite", favorites_path(mailbox_id: mailbox.id, address_searched: @query), method: :post) %></td>
+      </tr>
   <% end -%>
+</tbody>
 </table>
+
 
 
 
@@ -36,9 +45,6 @@
 </script>
 
 
-
-<!--   Copy both these lines incl the hashes in CSS file to see if it improves zoom bar rendering  #mapCanvas label { width: auto; display:inline; }
-#mapCanvas img { max-width: none; } -->
 
 
 
