--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Favorites#index</h1>
-<p>Find me in app/views/favorites/index.html.erb</p>
+<ul>
+<% @favorites.each do |mailbox| %>
+<li><%=  Mailbox.find(mailbox.mailbox_id).address %></li>
+<li>near: <%= mailbox.address_searched %>
+<% end %>
+</ul>
