rename app in production.rb

--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -4,3 +4,24 @@
 <li>near: <%= mailbox.address_searched %>
 <% end %>
 </ul>
+
+
+<!-- <thead>
+    <tr>
+      <th>Mailbox location</th>
+      <th>Reference address</th>
+      <th></th>
+    </tr>
+  </thead>
+<tbody>
+   <%# @results.each do |mailbox| %>
+      <tr>
+        <td>@favorites.each do |mailbox|</td>
+        <td><%#=  Mailbox.find(mailbox.mailbox_id).address %>  miles</td>
+        <%# if user_signed_in? %>
+        <td><%#= button_to("Make a Favorite", favorites_path(mailbox_id: mailbox.id, address_searched: @query, user_id: current_user.id)) %></td>
+        <%# end %>
+      </tr>
+  <%# end %>
+</tbody>
+</table>-->
