--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,7 +1,7 @@
 <ul>
 <% @favorites.each do |mailbox| %>
 <li><%=  Mailbox.find(mailbox.mailbox_id).address %></li>
-<li>near: <%= mailbox.address_searched %>
+<li>near: <%= mailbox.address_searched %></li>
 <% end %>
 </ul>
 
@@ -9,15 +9,17 @@
 <!-- <thead>
     <tr>
       <th>Mailbox location</th>
-      <th>Reference address</th>
+      <th>Search reference address</th>
       <th></th>
     </tr>
   </thead>
+
 <tbody>
-   <%# @results.each do |mailbox| %>
       <tr>
-        <td>@favorites.each do |mailbox|</td>
-        <td><%#=  Mailbox.find(mailbox.mailbox_id).address %>  miles</td>
+        <%# @favorites.each do |mailbox| %>
+        <td><%#= Mailbox.find(mailbox.mailbox_id).address %>  miles</td>
+        <td>near: <%#= mailbox.address_searched. %></td>
+
         <%# if user_signed_in? %>
         <td><%#= button_to("Make a Favorite", favorites_path(mailbox_id: mailbox.id, address_searched: @query, user_id: current_user.id)) %></td>
         <%# end %>
