--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,29 +1,31 @@
-<ul>
-<% @favorites.each do |mailbox| %>
-<li><%=  Mailbox.find(mailbox.mailbox_id).address %></li>
-<li>near: <%= mailbox.address_searched %></li>
-<% end %>
-</ul>
+<!-- <ul>
+<%# @favorites.each do |mailbox| %>
+<li><%#=  Mailbox.find(mailbox.mailbox_id).address %></li>
+<li>near: <%#= mailbox.address_searched %></li>
+<%# end %>
+</ul> -->
+<center>
+<table class="table">
+    <thead>
+          <tr>
+              <th>Mailbox location</th>
+              <th>Search reference address</th>
+              <th></th>
+          </tr>
+      </thead>
+
+      <tbody>
+            <tr>
+                  <% @favorites.each do |mailbox| %>
+                <td><%= Mailbox.find(mailbox.mailbox_id).address %></td>
+                <td>near: <%= mailbox.address_searched.capitalize %></td>
 
 
-<!-- <thead>
-    <tr>
-      <th>Mailbox location</th>
-      <th>Search reference address</th>
-      <th></th>
-    </tr>
-  </thead>
-
-<tbody>
-      <tr>
-        <%# @favorites.each do |mailbox| %>
-        <td><%#= Mailbox.find(mailbox.mailbox_id).address %>  miles</td>
-        <td>near: <%#= mailbox.address_searched. %></td>
-
-        <%# if user_signed_in? %>
-        <td><%#= button_to("Make a Favorite", favorites_path(mailbox_id: mailbox.id, address_searched: @query, user_id: current_user.id)) %></td>
-        <%# end %>
-      </tr>
-  <%# end %>
-</tbody>
-</table>-->
+                  <% if user_signed_in? %>
+                      <td> <%= button_to "Remove", favorites_path(current_user), method: 'destroy', data: {confirm: "Are you sure you want to delete this mailbox from your favorites?"}%></td>
+                    <% end %>
+            </tr>
+                  <% end %>
+      </tbody>
+</table>
+</center>
