--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,13 @@
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
   </head>
-  <body>
+          <body>
+                <%if notice %>
+                      <p class="notice"><%= notice %></p>
+                <% end %>
+                <%if alert %>
+                      <p class="alert"><%= alert %></p>
+          <% end %>
     <header>
       <%= render 'layouts/navigation' %>
     </header>
