--- a/app/views/mailboxes/index.html.erb
+++ b/app/views/mailboxes/index.html.erb
@@ -1,26 +1,28 @@
-
-<div>
+<center>
+    <div>
             <h1>Bluebox Finder</h1>
             <h5>The Manhattan Beta Edition</h5>
-    <br></br>
+                <br></br>
             <h2>Locate USPS mailboxes near you.</h2>
-</div>
+    </div>
+</center>
 
-<br></br>
+                  <br></br>
+<center>
 
-<div>
-  <h3>Search near:</h3>
-  <!-- Search fiield for search address -->
-      <%= form_tag search_mailboxes_path, method: :get do %>
-      <%= text_field_tag 'search' , nil, placeholder: ' Enter an address' %>
-      <%= submit_tag "Search!" %>
-      <% end %>
-
-</div>
-<div>
-  <!-- Drop down menu of favorate user search locations -->
- <%#= f.select :favorites, #method: :get do
-  User.favorites.all.map { |fave| [fave.address_searched, fave.id] },
-  { include_blank: true },
-  %>
-</div>
+      <div>
+                <!-- Search fiield for search address -->
+                <%= form_tag search_mailboxes_path, method: :get do %>
+                <%= text_field_tag 'search' , nil, placeholder: ' Enter an address' %>
+                 <%= submit_tag "Search!" %>
+                <% end %>
+          </div>
+</center>
+          <br></br>
+<center>
+    <div>
+        <% if user_signed_in? %>
+            <%= link_to "GO TO MY FAVORITES", favorites_path(user_id:current_user) %>
+        <% end %>
+    </div>
+</center>
