--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -17,7 +17,7 @@
 
 
                   <% if user_signed_in? %>
-                      <td> <%= button_to "Remove", favorites_path(current_user), method: 'destroy', data: {confirm: "Are you sure you want to delete this mailbox from your favorites?"}%></td>
+                      <td> <%= button_to "Remove", favorite_path(mailbox), method: :delete, data: {confirm: "Are you sure you want to delete this mailbox from your favorites?"}%></td>
                     <% end %>
             </tr>
                   <% end %>
